# spotgp

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: Makefile  conf.py  index.md  make_logo.py  overview.md  py2md.py  requirements.txt
docs/_static/: architecture.fdb_latexmk  architecture.fls  architecture.tex  custom.css  notebook_download.js
docs/api/: spotgp.rst  src.rst  src_jax.rst
files/: training_parameters.csv
scripts/: create_sample.py  generate_training.py  generate_vis_sample.py  make_logo.py  mcmc_kepler63.py  plot_autocov_fft.py  run_blackjax.py  run_dynesty.py  train.slurm  train_coeff.py  train_model.py  training_sample.py
spotgp/: __init__.py  analytic_kernel.py  banded_cholesky.py  distributions.py  envelope.py  gp_solver.py  latitude.py  lightcurve.py  mcmc.py  observations.py  sensitivity.py  spot_model.py
src/: __init__.py  analytic_kernel.py  callbacks.py  envelope.py  gp_solver.py  kernel_fourier.py  lightcurve.py  mcmc copy.py  nn_kernel.py  nnkernel.py  numerical_kernel.py  preprocess.py  psd.py  rotatation_kernel.py  rotation_kernel.py  spot_model.py  starspot.py  visibility.py  visualization.py
src_jax/: __init__.py  analytic_kernel.py  banded_cholesky.py  gp_solver.py  lightcurve.py  mcmc.py  numerical_kernel.py  params.py  spot_model.py  starspot.py
src_numpy/: __init__.py  analytic_kernel.py  gp_solver.py  mcmc.py  numerical_kernel.py  params.py  starspot.py
tests/: conftest.py  test_analytic_kernel.py  test_analytic_kernel_advanced.py  test_banded_cholesky.py  test_distributions.py  test_envelope.py  test_envelope_advanced.py  test_gp_solver.py  test_gp_solver_advanced.py  test_gp_solver_data.py  test_latitude.py  test_latitude_advanced.py  test_lightcurve.py  test_mcmc.py  test_mcmc_advanced.py  test_numerical_kernel.py  test_observations.py  test_observations_plotting.py  test_params.py  test_psd.py  test_spot_model.py  test_spot_model_advanced.py  test_visibility.py
training/: test_covariances.npz  test_features.csv  test_scaled.npz  train_covariances.npz  train_features.csv  train_scaled.npz  training_parameters.csv
(+110 files in other folders)
