[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotgp"
version = "0.1.0"
description = "Gaussian Process kernels for stellar variability from starspot models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jessica Birky"},
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "scikit-learn",
    "tqdm",
]

[project.optional-dependencies]
jax = ["jax", "jaxopt"]
docs = ["sphinx>=7.0", "furo>=2024.1.29", "numpydoc>=1.6", "sphinx-autodoc-typehints>=2.0"]

[tool.setuptools.packages.find]
include = ["src*"]
